# personal-TTS-assistant

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt  test_formatter_enhanced.py  test_formatter_final.py  test_ssml_formatter.py
backend/api/: main.py
backend/api/routes/: content.py  tts.py
backend/services/audio/: edge_tts.py
backend/services/content/: cleaner.py  extractor.py
backend/services/processing/: formatter.py
docs/: plan.md  todo.md
extension/: .env.example  package-lock.json  package.json  tsconfig.json  webpack.config.js
extension/public/: manifest.json  offscreen.html  popup.html
extension/src/background/: api-client.ts  audio-player.ts  index.ts
extension/src/content/: detector.ts  index.ts  modal-player.css  modal-player.ts  ui.ts
extension/src/content/email/: email-list-button.ts  email-player.ts  index.ts
extension/src/content/email/detectors/: base-detector.ts  gmail-detector.ts  registry.ts
extension/src/offscreen/: index.ts
extension/src/popup/: index.ts
mobile/: .env.example
